--- a/app/src/app/map_component/map.component.html
+++ b/app/src/app/map_component/map.component.html
@@ -1,3 +1,6 @@
-<h1>
-  Map
-</h1>
+<ng2-map style="height: 600px; width: 800px" zoom=14 center={{center}}>
+    <!-- <directions draggable="true" panel="directions-panel" travel-mode="DRIVING" waypoints="{{wayPoints}}" origin="toronto" destination="ottawa">
+    </directions> -->
+</ng2-map>
+<div id="directions-panel" style="width: 28%; float:left; height: 100%; overflow: auto; padding: 0px 5px">
+</div>
